# token-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  RUNNING.md  SETUP.md  docker-compose.yml  skills-lock.json  test_token_monitor.db
.agents/skills/token-monitor-setup/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/commands/: rag-knowledge-capture-cli.md
.claude/summaries/: 2026-04-12-token-monitor-backend-fix-local-dev.md  2026-04-13-auto-logger-jsonl-token-detection.md  2026-04-13-sessionend-hook-windows-fix.md  2026-04-13-token-monitor-deploy-setup.md  2026-04-13-token-monitor-hook-fixes-standalone.md  2026-04-13-token-monitor-installer-skill-distribution.md  2026-04-21-token-monitor-account-display-deploy-fixes.md
.claude/tmp/: test-client.mjs  test-mcp.sh
.gitea/workflows/: deploy.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: database.py
backend/app/models/: __init__.py  models.py  session_log.py
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  TokenMonitor.jsx  main.tsx
scripts/: auto-logger.py  install.py
src/backend/: pyproject.toml
src/backend/app/: main.py
src/backend/app/core/: config.py  database.py  pricing.py
src/backend/app/models/: __init__.py  session_log.py
src/backend/app/routers/: sessions.py
src/backend/app/schemas/: __init__.py  session.py
src/frontend/: nginx.conf  package.json  vite.config.ts
src/scripts/: auto-logger.py  setup-hook.py
tests/: conftest.py
tests/backend/: conftest.py  test_api.py
tests/scripts/: test_auto_logger.py
(+8 files in other folders)
