[project]
name = "token-monitor-backend"
version = "1.0.0"
description = "Token usage monitor for Claude Code CLI + Copilot"
authors = [{ name = "Figur Ulul Azmi" }]
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
